--- a/playground/molviewspec/molviewspec-test.html
+++ b/playground/molviewspec/molviewspec-test.html
@@ -3,12 +3,37 @@
     <head>
         <script src="https://cdn.jsdelivr.net/npm/molstar@latest/build/viewer/molstar.js"></script>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/molstar@latest/build/viewer/molstar.css" />
+        <script src="./search_results.js" defer></script>
         <script src="./molviewspec-test.js" defer></script>
+
+        <style>
+            details {
+              border: 1px solid #aaaaaa;
+              border-radius: 4px;
+              padding: 0.5em 0.5em 0;
+            }
+
+            summary {
+              font-weight: bold;
+              margin: -0.5em -0.5em 0;
+              padding: 0.5em;
+            }
+
+            details[open] {
+              padding: 0.5em;
+            }
+
+            details[open] summary {
+              border-bottom: 1px solid #aaaaaa;
+              margin-bottom: 0.5em;
+            }
+        </style>
     </head>
     <body>
-        <div style="display: flex; justify-content: center; width: 100%">
-            <div id="viewer1" style="position: relative; width: 500px; height: 500px;"></div>
-        </div>
+        <div id="container-outer" style="width: 100%"></div>
+        <!-- <div style="display: flex; justify-content: center; width: 100%"> -->
+        <!--     <div id="viewer1" style="position: relative; width: 500px; height: 500px;"></div> -->
+        <!-- </div> -->
     </body>
 
 </html>
