feat: simple result viewer

--- a/playground/molviewspec/molviewspec-test.html
+++ b/playground/molviewspec/molviewspec-test.html
@@ -30,7 +30,7 @@
         </style>
     </head>
     <body>
-        <div id="container-outer" style="width: 100%"></div>
+        <div id="container-outer" style="width: 100%; max-width: 800px"></div>
         <!-- <div style="display: flex; justify-content: center; width: 100%"> -->
         <!--     <div id="viewer1" style="position: relative; width: 500px; height: 500px;"></div> -->
         <!-- </div> -->
